--- a/SuperChat/Makefile
+++ b/SuperChat/Makefile
@@ -5,7 +5,7 @@ COMMON_LIBS=-L${OSPL_HOME}/lib/ \
             -lddskernel \
             -lpthread
 
-CXX_FLAGS=-Wall -O0 -g
+CXX_FLAGS=-std=c++11 -Wall -O0 -g
 
 FILES_GENERATED_FROM_THE_IDL_BY_IDLPP= ./bin/SuperChatDcps_impl.h ./bin/SuperChat.cpp \
                                      ./bin/SuperChatSplDcps.cpp ./bin/SuperChatDcps.cpp \
@@ -15,7 +15,7 @@ FILES_GENERATED_FROM_THE_IDL_BY_IDLPP= ./bin/SuperChatDcps_impl.h ./bin/SuperCha
 ${FILES_GENERATED_FROM_THE_IDL_BY_IDLPP}:./idl/SuperChat.idl
 	idlpp -I ${OSPL_HOME}/etc/idl -l cpp ./idl/SuperChat.idl -d ./bin
 
-SRC_FILES= src/DDSEntityManager.cpp src/CheckStatus.cpp
+SRC_FILES= src/DDSEntityManager.cpp src/CheckStatus.cpp src/ChatDaemon.cpp src/UserInterface.cpp src/Initializer.cpp src/Chatroom.cpp src/User.cpp src/Message.cpp src/ViewController.cpp
 
 bin/SuperChat: ${FILES_GENERATED_FROM_THE_IDL_BY_IDLPP} ./src/SuperChat.cpp ${SRC_FILES}
 	g++ ${CXX_FLAGS} -o ./bin/SuperChat ./src/SuperChat.cpp \
@@ -24,7 +24,7 @@ bin/SuperChat: ${FILES_GENERATED_FROM_THE_IDL_BY_IDLPP} ./src/SuperChat.cpp ${SR
                ${SRC_FILES} \
                ${FILES_GENERATED_FROM_THE_IDL_BY_IDLPP} \
                ${COMMON_LIBS} \
-               
+               -lncurses
 
 clean:
 	-rm -f ./bin/SuperChat ${FILES_GENERATED_FROM_THE_IDL_BY_IDLPP}
