--- a/SuperChat/Makefile
+++ b/SuperChat/Makefile
@@ -4,6 +4,7 @@ COMMON_LIBS=-L${OSPL_HOME}/lib/ \
             -ldcpssacpp \
             -lddskernel \
             -lpthread \
+			-lboost_system
 
 CXX_FLAGS=-std=c++11 -Wall -O0 -g
 
